--- a/Lab7_FabioHenriquez/src/lab7_fabiohenriquez/principal.form
+++ b/Lab7_FabioHenriquez/src/lab7_fabiohenriquez/principal.form
@@ -385,18 +385,14 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="m_titulo1" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                                          <Component id="m_ip_destino1" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                                          <Component id="m_ip_origen1" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                                          <Component id="jScrollPane12" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Component id="jButton9" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="m_titulo1" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                                                  <Component id="m_ip_destino1" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                                                  <Component id="m_ip_origen1" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                                                  <Component id="jScrollPane12" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              </Group>
-                                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                                              <Component id="jScrollPane13" min="-2" pref="335" max="-2" attributes="0"/>
-                                          </Group>
                                       </Group>
+                                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                                      <Component id="jScrollPane13" min="-2" pref="335" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <EmptySpace pref="127" max="32767" attributes="0"/>
@@ -433,9 +429,9 @@
                                   </Group>
                                   <Component id="jScrollPane13" alignment="0" min="-2" pref="181" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
+                              <EmptySpace pref="20" max="32767" attributes="0"/>
                               <Component id="jButton9" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
